# the_grimoire

./: CMakeLists.txt  main.cpp
libs/sol/: config.hpp  forward.hpp  sol.hpp
src/: Logger.cpp  RenderWindow.cpp  RenderWindow.h
src/Engine/: Component.h  Entity.h  Scene.h
src/Logger/: Logger.h
src/Systems/: KeystrokeSystem.h  System.h
